@@ -1,7 +1,7 @@
 Fraucheky - the GPL container for USB devices
 
-							    Version 0.1
-							     2015-01-21
+							    Version 0.3
+							     2015-0X-XX
 						           Niibe Yutaka
 
 What's this?
